--- a/site/RageGames.css
+++ b/site/RageGames.css
@@ -51,7 +51,6 @@ body {
   margin-left: .75rem;
 }
 
-
 /* Featurettes
 ------------------------- */
 
@@ -87,4 +86,14 @@ body {
   .featurette-heading {
     margin-top: 7rem;
   }
+}
+
+div.Texto {
+	width: 100%;
+	height: auto;
+	float: left;
+	text-align: certer;
+	color: #777;
+	font-weight: 700;
+	font-size: 200
 }
