--- a/site/RageGames.css
+++ b/site/RageGames.css
@@ -3,7 +3,7 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-top: 3rem;
+  padding-top: 3.5rem;
   padding-bottom: 3rem;
   color: #5a5a5a;
 }
@@ -110,3 +110,9 @@ div.Texto {
 .jumbotron {
   padding: 0;
 }
+
+.container {
+  max-width: 960px;
+}
+
+.lh-condensed { line-height: 1.25; }
